app_controllers/infrastructure/kubernetes-deployments/pods/app/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-charles
spec:
  selector:
    app: app-charles
  ports:
  - name: http
    targetPort: 3000
    port: 80
  - name: cloudcmd
    targetPort: 9000
    port: 9000
