app_controllers/infrastructure/kubernetes-deployments/pods/app/03_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: app-charles.us-west1-a.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: app-charles
          servicePort: http
